# energy_throttling_llms

./: LICENSE  README.md  main.py  parameters.md  pyproject.toml  test.py  test_function_trace.json
RL/: __init__.py  rl.py  sglang.py
RL/components/: README.MD  __init__.py  fast_updating_actor.py  profiler_cpu_gpu.py  q_value.py  target_actor.py
metrics/: cpu_metrics.py  eagle_metrics.py  gpu_metrics.py  model_metrics.py  requirements.txt  rewardCal.py  runtime_metrics.py
neural_network/: info.md  nn.py
notes/: eagle3.md  readme.md  tree_attention.md
profiled_metrics/: test_function_profile_20251101_120014.json  test_function_profile_20251101_120137.json
